# ocr-conclave

./: .gitignore  .prettierrc  config.yml  package-lock.json  package.json  tsconfig.json
python-poc/: pyproject.toml
src/: Cache.ts  Conclave.ts  Storage.ts  bbcode.ts  config.ts  datetime.ts  env.ts  gdoc.ts  getInstructions.ts  json.ts  main.ts  md5.ts  mimeUtil.ts  ocr.ts
src/chats/: claude.ts  gemini.ts  gpt.ts
src/stages/: stageOcr.ts  stageTextCleanup.ts  stageVoting.ts
src/types/: ConclaveMember.ts  TextCleanup.ts  Votes.ts  Voting.ts
